tests_bucklescript/__snapshots__/Error_Records_missingField_re.c99a95b9.0.snapshot
Error Records › missingField1.re › output
File \"tests_bucklescript/operations/errors/missingField1.re\", line 6, characters 6-27:
6 |       thisFieldDoesNotExist
          ^^^^^^^^^^^^^^^^^^^^^
Error: Unknown field 'thisFieldDoesNotExist' on type CustomScalarObject

  \027[1;31mWe've found a bug for you!\027[0m
  \027[36mtests_bucklescript/operations/errors/missingField1.re\027[0m
  
  Error while running external preprocessor
